# zsr

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  format  test.cpp  variant-test.cpp
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: cmake.yml
extension/: .gitignore  CMakeLists.txt  build.xml
extension/freemarker/: package.cpp.ftl  package.hpp.ftl  reflection-main.cpp.ftl  reflection-traits.hpp.ftl
extension/metainf/services/: zserio.tools.Extension
extension/src/zserio/emit/cpp_reflect/: CppReflectExtension.java  CppReflectExtensionVersion.java  EmitterBase.java  IncludeEmitter.java  LibraryTemplateData.java  PackageTemplateData.java  ReflectionEmitter.java  TraitsEmitter.java  TraitsTemplateData.java  TypeRefVisitor.java
runtime/: CMakeLists.txt  amalgamate.cmake  rapidjson.cmake  submodule-depends.py
runtime/src/: c-type-helper.hpp  error.cpp  field-accessor-helper.hpp  getset.cpp  introspectable-json.cpp  introspectable.cpp  lib-prefix.cpp  parameterlist-helper.hpp  reflection-macros.hpp  speedy-j.cpp  tmp-helper.hpp  type-traits.hpp  types-json.cpp  types.cpp
runtime/test/: variant-test.cpp
runtime/test/zserio/: base.hpp
runtime/test/zserio/bitmask_test/: bitmask_test.cpp  bitmask_test.zs
runtime/test/zserio/choice_test/: choice_test.cpp  choice_test.zs
runtime/test/zserio/constant_test/: constant_test.cpp
runtime/test/zserio/enumeration_test/: enumeration_test.cpp  enumeration_test.zs
runtime/test/zserio/find_test/: find_test.cpp  find_test.zs
runtime/test/zserio/find_test/nested_schema/: child.zs
runtime/test/zserio/getset_test/: getset_test.cpp  getset_test.zs
runtime/test/zserio/json_test/: json_test.cpp  json_test.zs
runtime/test/zserio/service_test/: service_test.cpp  service_test.zs
runtime/test/zserio/structure_test/: structure_test.cpp  structure_test.zs
runtime/test/zserio/union_test/: union_test.cpp  union_test.zs
runtime/zsr/: error.hpp  export.hpp  find.hpp  getset.hpp  introspectable-json.hpp  introspectable-private.hpp  introspectable.hpp  reflection-main.hpp  speedy-j-impl.hpp  speedy-j.hpp  stub.hpp  types-json.hpp  types.hpp  variant.hpp
src/: c-type-helper.hpp  error.cpp  fiel-accessor-helper.hpp  introspectable.cpp  lib-prefix.cpp  parameterlist-helper.hpp  reflection-macros.hpp  tmp-helper.hpp  type-traits.hpp  types.cpp
test/zserio/: base.hpp
test/zserio/bitmask_test/: bitmask_test.zs
test/zserio/choice_test/: choice_test.cpp  choice_test.zs
test/zserio/constant/: constant.cpp  constant.zs
test/zserio/constant_test/: constant_test.zs
test/zserio/enumeration/: enumeration.cpp  enumeration.zs
test/zserio/structure/: structure.cpp  structure.zs
test/zserio/structure_test/: structure_test.cpp  structure_test.zs
test/zserio/test_bitmask/: test_bitmask.cpp  test_bitmask.zs
test/zserio/union_test/: union_test.cpp  union_test.zs
zsr/: error.hpp  find.hpp  introspectable-private.hpp  introspectable.hpp  stub.hpp  types.hpp  variant.hpp
